--- a/webapp.csproj
+++ b/webapp.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
+    <PackageReference Include="mongodb.driver" Version="2.19.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
   </ItemGroup>
 
